2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Move place type and constants to library.

	* tools/lib/t-seqc/include/sl_support.h,
	* tools/lib/t-ptl/include/sl_support.h,
	* tools/lib/t-sppalpha/include/sl_support.h,
	* tools/lib/t-utc0/include/sl_support.h: Move declaration of
	`sl_place_t' and constants to...

	* tools/include/svp/delegate.h: ...here.
	* tools/Makefile.am: List the new file.
	* lib/include/svp/sep.h: Use it.

	* tools/lib/t-ptl/slimpl.m4,
	* tools/lib/t-sppalpha/slimpl.m4,
	* tools/lib/t-seqc/slimpl.m4: Do not use the constants, since they
	are not visible any more during translation.

	* tools/lib/host-host-ptl/include/ptl_svp.h: Force values in enum
	`ExitCode', so the constants become reliable.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve debugging with `slr'.

	* tools/bin/slr.in: Keep object files around when compiling
	`arggen.c' with `-gd' enabled, so that the debugger can find them.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use the new framework for `-b seqc'.

	* tools/bin/cce.in: Expand `seqc' to
	`spr+seq-host-host-seqc'. Remove support for two-word aliases.

	* build-aux/slctests.mk: Do not test extra for
	`spr+seq-host-host-seqc', since this is now the default.

2010-05-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve MT-Alpha code gen.

	The previous fix to protect "end" after a branch is not needed any
	more as the underlying hardware now ignores the end if the branch
	is taken. However we need to protect it for branches that may
	return, since the return goes to the following instruction which
	then must end the hread.

	* tools/lib/slc/mtalpha/asmproc/opt.py (protectend): Avoid
	inserting `nop' between normal branch and `end', only bsr and
	equivalent.

2010-05-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the math library.

	The math library needed to be recompiled; also the implementation
	of tgamma() was blatantly incorrect. It needs to compute the Gamma